fix amount error message alignment

--- a/sass/themes/donate/donate-cr/components/form/_form.scss
+++ b/sass/themes/donate/donate-cr/components/form/_form.scss
@@ -303,6 +303,11 @@ button[type="submit"],
     &.form__field--wrapper {
       margin-bottom: 0;
     }
+
+    .error-container {
+        position: relative;
+        top: 25px;
+      }
   }
 
   .form__field--currency {
